# Embedded-Telemetry-Monitoring-System

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
docs/: api-reference.md  architecture.md  database-schema.md  demo-guide.md  deployment.md  production-readiness.md  resume-notes.md  screenshot-checklist.md  screenshots.md  system-design.md  windows-setup.md
sample_data/: critical_reading.json  normal_reading.json
scripts/: generate_sample_data.py  run_demo.py  seed_demo_data.py
src/telemetry_monitor/api/: app.py
src/telemetry_monitor/core/: config.py  logging_config.py  status.py
src/telemetry_monitor/dashboard/: app.js  index.html  styles.css
src/telemetry_monitor/models/: alert.py  device.py  telemetry.py
src/telemetry_monitor/services/: classifier.py  simulator.py
src/telemetry_monitor/storage/: database.py  repository.py  schema.sql
tests/: test_api_integration.py  test_classifier.py
